# shell_hacks

./: .env.example  .gitignore  AMADEUS_SETUP.md  AUTH0_SETUP.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  start.sh  start_agents.sh  test_agents.sh  test_api_restaurants.py  test_enhanced_api.py  test_hotel_activities.py  test_integration.py  test_restaurant_debug.py
.github/: AUTHOR.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: linter.yaml  release-please.yml  spelling.yaml  unit-tests.yml
frontend/: index.html  index_backup.html
src/: api_gateway.py  auth_middleware.py  emergency_demo.py  gemini_agent.py  json_encoders.py  quick_demo_agents.py  real_api_flight_agent.py  real_api_gateway.py  test_api.py  travel_agent.py  travel_apis.py  travel_master.py  ultra_fast_system.py
src/agents/: a2a_negotiation_demo.py  activity_planning_agent.py  agent_discovery_service.py  flight_booking_agent.py  gemini_ai_agent.py  hotel_booking_agent.py
