[project]
name = "shell-hacks-sdk"
dynamic = ["version"]
description = "Shell Hacks SDK - Agent2Agent Protocol Implementation"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Kyle Price", email = "kyle@shell-hacks.dev" }]
requires-python = ">=3.10"
keywords = ["A2A", "A2A SDK", "A2A Protocol", "Agent2Agent", "Agent 2 Agent"]
dependencies = [
  "httpx>=0.28.1",
  "httpx-sse>=0.4.0",
  "pydantic>=2.11.3",
  "protobuf>=5.29.5",
  "google-api-core>=1.26.0",
  "aiohttp>=3.12.15",
  "pandas>=2.3.2",
  "numpy>=2.2.6",
  "python-dateutil>=2.9.0.post0",
  "amadeus>=12.0.0",
  "stripe>=12.5.1",
  "twilio>=9.8.2",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.1.1",
  "alembic>=1.16.5",
  "uvicorn[standard]>=0.37.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "pytest-asyncio>=1.1.0",
]

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
http-server = ["fastapi>=0.115.2", "sse-starlette", "starlette"]
encryption = ["cryptography>=43.0.0"]
grpc = ["grpcio>=1.60", "grpcio-tools>=1.60", "grpcio_reflection>=1.7.0"]
telemetry = ["opentelemetry-api>=1.33.0", "opentelemetry-sdk>=1.33.0"]
postgresql = ["sqlalchemy[asyncio,postgresql-asyncpg]>=2.0.0"]
mysql = ["sqlalchemy[asyncio,aiomysql]>=2.0.0"]
sqlite = ["sqlalchemy[asyncio,aiosqlite]>=2.0.0"]

sql = ["a2a-sdk[postgresql,mysql,sqlite]"]

all = [
  "a2a-sdk[http-server]",
  "a2a-sdk[sql]",
  "a2a-sdk[encryption]",
  "a2a-sdk[grpc]",
  "a2a-sdk[telemetry]",
]

[project.urls]
homepage = "https://github.com/LordCogsWorth/shell_hacks"
repository = "https://github.com/LordCogsWorth/shell_hacks"
changelog = "https://github.com/LordCogsWorth/shell_hacks/blob/main/CHANGELOG.md"
documentation = "https://github.com/LordCogsWorth/shell_hacks/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-ra --strict-markers"
markers = [
  "asyncio: mark a test as a coroutine that should be run by pytest-asyncio",
]

[tool.pytest-asyncio]
mode = "strict"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[dependency-groups]
dev = [
  "datamodel-code-generator>=0.30.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14.0",
  "respx>=0.20.2",
  "ruff>=0.12.8",
  "uv-dynamic-versioning>=0.8.2",
  "types-protobuf",
  "types-requests",
  "pre-commit",
  "fastapi>=0.115.2",
  "sse-starlette",
  "starlette",
  "pyupgrade",
  "autoflake",
  "no_implicit_optional",
  "trio",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pyright]
include = ["src"]
exclude = [
  "**/__pycache__",
  "**/dist",
  "**/build",
  "**/node_modules",
  "**/venv",
  "**/.venv",
  "src/a2a/grpc/",
]
reportMissingImports = "none"
reportMissingModuleSource = "none"
